--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="At PAINT Philadelphia, we understand the transformative power of a fresh coat of paint and the difference it can make in creating a space that feels uniquely yours." />
     <meta name="keywords" content="Painters in Main Line PA, Painting company in Main Line PA, Painting companies in Main Line PA" />
-    <meta property="og:title" content="Painters in Main Line PA in King of Prussia, PA" />
-    <title>Painters in Main Line PA in King of Prussia, PA</title>
+    <meta property="og:title" content="Painting Company in Main Line, PA" />
+    <title>Painting Company in Main Line, PA</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Painters in Main Line PA in King of Prussia, PA</h1>
+        <h1>Painting Company in Main Line, PA</h1>
         <button onclick="window.location.href='tel:+116109956935'">Click Here to Call Us: 16109956935</button>
     </div>
 
